# hmi-manipulation-demo

./: .gitignore  README.md  pyproject.toml
assets/ur5e_gripper/: build_scene.py  scene.xml
configs/: demo.yaml
src/hmi_demo/: __main__.py  app.py  config.py
src/hmi_demo/sim/: ik.py  trajectory.py  world.py
src/hmi_demo/ui/: hmi_window.py  render.py
src/hmi_demo/utils/: gesture.py
src/hmi_demo/vision/: hand_thread.py
tests/: conftest.py  test_config.py  test_gesture.py  test_ik.py  test_trajectory.py  test_world.py
